--- a/package.xml
+++ b/package.xml
@@ -1,23 +1,14 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>ridgeback_description</name>
   <version>0.1.9</version>
   <description>URDF robot description for Ridgeback</description>
-
   <maintainer email="yoshua@kth.se">Yoshua Nava</maintainer>
   <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
-
   <license>BSD</license>
-
   <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roslaunch</build_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>lms1xx</run_depend>
-  <run_depend>urdf</run_depend>
-  <run_depend>xacro</run_depend>
+  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
 
-  <export>
-  </export>
 </package>
